examples/test/testpolicy4048.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4048
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key49: value39
      key16: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value37
          key7: value39
      podSelector:
        matchLabels:
          key18: value13
          key38: value31
